--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="rows">What can I watch on Netflix? <div>+</div></div>
             <div class="rows">Is Netflix good for kids? <div>+</div></div>
 
-
+<!-- Hello world here added in GITHUB -->
         </section>
     </div>
 </body>
